added grid and style lint

--- a/index.html
+++ b/index.html
@@ -1,58 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:400">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mulish">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100">
-  <title>3 column design</title>
-</head>
-<body>
-<header>
-<img class="logo" src="img/bull.png" alt="Bull logo">
-<div class="navigation">
-  <nav><a href="#p1">Paragraph 1</a></nav>
-  <nav><a href="#p2">Paragraph 2</a></nav>
-  <nav><a href="#p3">Paragraph 3</a></nav>
-  <nav><a href="#p4">Paragraph 4</a></nav>
-</div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:400"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Mulish"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:100"
+    />
+    <title>3 column design</title>
+  </head>
+  <body>
+    <img class="logo" src="img/bull.png" alt="Bull logo" />
+    <nav>
+      <a href="#p1">Paragraph 1</a>
+      <a href="#p2">Paragraph 2</a>
+      <a href="#p3">Paragraph 3</a>
+      <a href="#p4">Paragraph 4</a>
+    </nav>
+    <aside class="aside-left">
+      <p>
+        Ad exercitation enim cillum adipisicing ipsum amet labore fugiat Lorem
+        est laborum duis aliqua ex. Ad enim adipisicing voluptate ad sit culpa
+        commodo commodo officia. Anim quis ea est ut velit consectetur sint.
+        Nisi laborum exercitation magna dolore.
+      </p>
+      <p>
+        Incididunt laborum reprehenderit pariatur do anim consequat elit ea
+        aliquip. Aute eiusmod consectetur ullamco labore laboris ut esse. Nisi
+        anim consequat aute aliquip. Pariatur occaecat mollit amet ipsum ex
+        eiusmod quis qui officia elit officia mollit aliquip. Eiusmod irure
+        ipsum id pariatur in laboris.
+      </p>
+    </aside>
+    <main>
+      <article>
+        <h1 id="p1">Eiusmod quis exercitation amet sint dolor aliqua duis.</h1>
+        <p>
+          Incididunt amet in eiusmod eiusmod aute adipisicing labore mollit
+          cupidatat consectetur mollit cillum labore et. Sit duis commodo sit
+          reprehenderit reprehenderit minim. Esse cillum velit minim do aute
+          ipsum duis ipsum sit aliqua mollit culpa eiusmod.
+        </p>
+      </article>
+      <article>
+        <h1 id="p2">
+          Velit culpa consequat adipisicing id occaecat ad dolor sint est
+          pariatur consectetur fugiat.
+        </h1>
+        <p>
+          Proident commodo cupidatat aliqua quis et Lorem in aliqua. Aliquip eu
+          est deserunt veniam exercitation sunt esse. Eu ex officia mollit
+          magna. Ullamco id anim aliquip esse ipsum.
+        </p>
+      </article>
+      <article>
+        <h1 id="p3">Aliquip reprehenderit quis eiusmod ut.</h1>
+        <p>
+          Cupidatat tempor ex ex cupidatat. Amet qui in quis id ut nisi sunt
+          amet consequat mollit ex. Id in ut ipsum quis tempor esse mollit. Sunt
+          laborum velit eiusmod aute minim voluptate qui elit duis et ad. Duis
+          exercitation dolore esse officia est reprehenderit pariatur nisi
+          mollit quis sint duis.
+        </p>
+      </article>
+      <article>
+        <h1 id="p4">Irure aute eiusmod ex est elit nisi tempor sint.</h1>
+        <p>
+          Laborum do Lorem magna aute velit do labore in mollit eiusmod enim
+          elit. Do cillum Lorem quis ullamco. Dolore labore excepteur sunt
+          dolore exercitation magna nulla cupidatat adipisicing qui esse ut
+          nulla sint.
+        </p>
+      </article>
+    </main>
+    <aside class="aside-right">
+      <p>
+        Duis velit sint sit occaecat irure veniam officia minim. Cupidatat non
+        ullamco ex do exercitation nulla amet. Enim excepteur cupidatat
+        exercitation ad mollit ullamco occaecat id consequat cupidatat. Ipsum
+        aliqua mollit cupidatat ullamco occaecat nostrud. Amet aliqua ut ex aute
+        ullamco. Nostrud ex laborum enim veniam occaecat sit culpa nostrud
+        voluptate tempor ex. Eu dolor ea incididunt nostrud anim proident do
+        nostrud.
+      </p>
+    </aside>
+    <p class="footer1">
+      Eiusmod proident fugiat mollit dolore quis aliquip sint reprehenderit
+      cillum nisi minim nisi. Magna elit eiusmod eiusmod culpa ullamco est
+      aliquip in sit ad in proident. Sunt tempor sunt cillum enim id ullamco eu
+      consectetur labore id mollit irure commodo.
+    </p>
+    <p class="footer2">
+      Do voluptate labore ea sunt consectetur culpa esse est aliqua mollit
+      minim. In ex occaecat Lorem commodo amet consequat velit aliquip fugiat id
+      officia esse Lorem. Nostrud minim ea proident ex aliquip ullamco enim
+      adipisicing ad ipsum laboris nisi. Nostrud reprehenderit eu laborum
+      proident.
+    </p>
+    <p class="footer3">
+      Enim est minim deserunt labore velit. Anim laborum eu incididunt consequat
+      incididunt mollit eu. Ullamco amet consequat laboris nisi esse et
+      consequat sunt et. Non ex commodo eu et cillum amet Lorem. Anim ad veniam
+      reprehenderit laborum exercitation elit do incididunt exercitation Lorem
+      aute ea. Aliqua do minim eiusmod pariatur occaecat ad irure ea sit anim
+      id. Officia ex non labore ad minim quis elit do proident et.
+    </p>
 
-</header>
-<main>
-  <section class="side-section">
-    <p>Ad exercitation enim cillum adipisicing ipsum amet labore fugiat Lorem est laborum duis aliqua ex. Ad enim adipisicing voluptate ad sit culpa commodo commodo officia. Anim quis ea est ut velit consectetur sint. Nisi laborum exercitation magna dolore.</p>
-    <p>Incididunt laborum reprehenderit pariatur do anim consequat elit ea aliquip. Aute eiusmod consectetur ullamco labore laboris ut esse. Nisi anim consequat aute aliquip. Pariatur occaecat mollit amet ipsum ex eiusmod quis qui officia elit officia mollit aliquip. Eiusmod irure ipsum id pariatur in laboris.</p>
-  </section>
-  <section class="main-section">
-    <article>
-      <h1 id="p1">Eiusmod quis exercitation amet sint dolor aliqua duis.</h1>
-      <p>Incididunt amet in eiusmod eiusmod aute adipisicing labore mollit cupidatat consectetur mollit cillum labore et. Sit duis commodo sit reprehenderit reprehenderit minim. Esse cillum velit minim do aute ipsum duis ipsum sit aliqua mollit culpa eiusmod.</p>
-    </article>
-    <article>
-      <h1 id="p2">Velit culpa consequat adipisicing id occaecat ad dolor sint est pariatur consectetur fugiat.</h1>
-      <p>Proident commodo cupidatat aliqua quis et Lorem in aliqua. Aliquip eu est deserunt veniam exercitation sunt esse. Eu ex officia mollit magna. Ullamco id anim aliquip esse ipsum.</p>
-    </article>
-    <article>
-      <h1 id="p3">Aliquip reprehenderit quis eiusmod ut.</h1>
-      <p>Cupidatat tempor ex ex cupidatat. Amet qui in quis id ut nisi sunt amet consequat mollit ex. Id in ut ipsum quis tempor esse mollit. Sunt laborum velit eiusmod aute minim voluptate qui elit duis et ad. Duis exercitation dolore esse officia est reprehenderit pariatur nisi mollit quis sint duis.</p>
-    </article>
-    <article>
-      <h1 id="p4">Irure aute eiusmod ex est elit nisi tempor sint.</h1>
-      <p>Laborum do Lorem magna aute velit do labore in mollit eiusmod enim elit. Do cillum Lorem quis ullamco. Dolore labore excepteur sunt dolore exercitation magna nulla cupidatat adipisicing qui esse ut nulla sint.</p>
-    </article>
-  </section>
-  <section class="side-section">
-    <p>Duis velit sint sit occaecat irure veniam officia minim. Cupidatat non ullamco ex do exercitation nulla amet. Enim excepteur cupidatat exercitation ad mollit ullamco occaecat id consequat cupidatat. Ipsum aliqua mollit cupidatat ullamco occaecat nostrud. Amet aliqua ut ex aute ullamco. Nostrud ex laborum enim veniam occaecat sit culpa nostrud voluptate tempor ex. Eu dolor ea incididunt nostrud anim proident do nostrud.</p>
-  </section>
-</main>
-<footer>
-  <p>Eiusmod proident fugiat mollit dolore quis aliquip sint reprehenderit cillum nisi minim nisi. Magna elit eiusmod eiusmod culpa ullamco est aliquip in sit ad in proident. Sunt tempor sunt cillum enim id ullamco eu consectetur labore id mollit irure commodo.</p>
-  <p>Do voluptate labore ea sunt consectetur culpa esse est aliqua mollit minim. In ex occaecat Lorem commodo amet consequat velit aliquip fugiat id officia esse Lorem. Nostrud minim ea proident ex aliquip ullamco enim adipisicing ad ipsum laboris nisi. Nostrud reprehenderit eu laborum proident.</p>
-  <p>Enim est minim deserunt labore velit. Anim laborum eu incididunt consequat incididunt mollit eu. Ullamco amet consequat laboris nisi esse et consequat sunt et. Non ex commodo eu et cillum amet Lorem. Anim ad veniam reprehenderit laborum exercitation elit do incididunt exercitation Lorem aute ea. Aliqua do minim eiusmod pariatur occaecat ad irure ea sit anim id. Officia ex non labore ad minim quis elit do proident et.</p>
-  <p>Reprehenderit nostrud nisi consectetur officia. Eu reprehenderit pariatur mollit est ipsum minim qui consectetur. Sunt irure commodo tempor proident consectetur adipisicing eiusmod anim magna amet aliquip quis non.</p>
-</footer>
-</body>
+    <p class="footer4">
+      Reprehenderit nostrud nisi consectetur officia. Eu reprehenderit pariatur
+      mollit est ipsum minim qui consectetur. Sunt irure commodo tempor proident
+      consectetur adipisicing eiusmod anim magna amet aliquip quis non.
+    </p>
+  </body>
 </html>
